metadata/force-app/main/default/objects/Lead/fields/MK_Lead_Grade_Segment__c.field-meta.xml
<CustomField>
    <fullName>MK_Lead_Grade_Segment__c</fullName>
    <description>MadKudu Lead Grade segment (A, B, C, D or E)</description>
    <inlineHelpText>Possible values: A, B, C, D, E. Combination of the MK Customer Fit score and the MK Lead Engagement score. 
Lead with a Grade A are your best leads</inlineHelpText>
    <label>MK Lead Grade Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <color>#3333FF</color>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <color>#66E9BD</color>
                <label>B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <color>#F3D904</color>
                <label>C</label>
            </value>
            <value>
                <fullName>D</fullName>
                <color>#FF9900</color>
                <label>D</label>
            </value>
            <value>
                <fullName>E</fullName>
                <color>#A53711</color>
                <label>E</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>