metadata/force-app/main/default/objects/Lead/fields/Month_Created__c.field-meta.xml
<CustomField>
    <fullName>Month_Created__c</fullName>
    <description>Created - Month</description>
    <formula>MONTH(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>