metadata/force-app/main/default/objects/Lead/fields/Most_Recent_MQL__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-2271: Fields Needed for Lead Scoring Regression</description>
    <label>Most Recent MQL</label>
    <type>Checkbox</type>
</CustomField>