metadata/force-app/main/default/objects/Lead/fields/Most_Recent_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Source_Description__c</fullName>
    <description>webdam fields</description>
    <label>Most Recent Source Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>