metadata/force-app/main/default/objects/Lead/fields/Most_Recent_Source_Detailed__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Source_Detailed__c</fullName>
    <description>Webdam fields</description>
    <label>Most Recent Source Detailed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>