metadata/force-app/main/default/objects/Lead/fields/MQL__c.field-meta.xml
<CustomField>
    <fullName>MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>