metadata/force-app/main/default/objects/Lead/fields/Next_step__c.field-meta.xml
<CustomField>
    <fullName>Next_step__c</fullName>
    <label>Next step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>