metadata/force-app/main/default/objects/Lead/fields/No_Email__c.field-meta.xml
<CustomField>
    <fullName>No_Email__c</fullName>
    <formula>ISBLANK(Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Email</label>
    <type>Checkbox</type>
</CustomField>