metadata/force-app/main/default/objects/Lead/fields/OEM_Partner__c.field-meta.xml
<CustomField>
    <fullName>OEM_Partner__c</fullName>
    <label>OEM Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquia</fullName>
            </value>
            <value>
                <fullName>Akamai</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>