metadata/force-app/main/default/objects/Lead/fields/of_Discovery_Calls_Booked__c.field-meta.xml
<CustomField>
    <fullName>of_Discovery_Calls_Booked__c</fullName>
    <label># of Discovery Calls booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>