metadata/force-app/main/default/objects/Lead/fields/of_future_tasks__c.field-meta.xml
<CustomField>
    <fullName>of_future_tasks__c</fullName>
    <description>The number of tasks on this lead with due date in the future.</description>
    <inlineHelpText>The number of tasks on this lead with due date in the future.</inlineHelpText>
    <label># of future tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>