metadata/force-app/main/default/objects/Lead/fields/of_times_MQL_ed__c.field-meta.xml
<CustomField>
    <fullName>of_times_MQL_ed__c</fullName>
    <description>BODEV-2271 Fields Needed for Lead Scoring Regression</description>
    <label># of times MQL&apos;ed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>