metadata/force-app/main/default/objects/Lead/fields/ON24CN__BusinessInterests__c.field-meta.xml
<CustomField>
    <fullName>ON24CN__BusinessInterests__c</fullName>
    <description>Values comma separated will go into this field from Webcast</description>
    <label>ON24 Business Interests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>