metadata/force-app/main/default/objects/Lead/fields/ON24CN__LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>ON24CN__LastUpdated__c</fullName>
    <description>This will let me know how recent and relevant the &quot;ON24 Engagement Level&quot; and &quot;ON24 Business Interests&quot; field data is.</description>
    <label>ON24 Last Updated</label>
    <type>DateTime</type>
</CustomField>