metadata/force-app/main/default/objects/Lead/fields/On_going_project_looking_at_DAM__c.field-meta.xml
<CustomField>
    <fullName>On_going_project_looking_at_DAM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used by BDRs for lead qualification</description>
    <inlineHelpText>Field used by BDRs for lead qualification</inlineHelpText>
    <label>On-going project looking at DAM</label>
    <type>Checkbox</type>
</CustomField>