metadata/force-app/main/default/objects/Lead/fields/Original_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Source__c</fullName>
    <description>wd field
Acquired List 
US University Self Generated 
Website Corporate Inquiry 
WebDAM 
Content Request 
CASE DVII 2011 List 
Prospecting 
Shutterstock BLACKLISTED</description>
    <label>Original Lead Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>