metadata/force-app/main/default/objects/Lead/fields/Original_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Original_Referrer__c</fullName>
    <description>webdam fields</description>
    <label>Original Referrer</label>
    <type>TextArea</type>
</CustomField>