metadata/force-app/main/default/objects/Lead/fields/Original_Search_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Original_Search_Phrase__c</fullName>
    <description>webdam fields</description>
    <label>Original Search Phrase</label>
    <type>TextArea</type>
</CustomField>