metadata/force-app/main/default/objects/Lead/fields/Original_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_Source_Type__c</fullName>
    <description>webdam fields</description>
    <label>Original Source Type</label>
    <type>TextArea</type>
</CustomField>