metadata/force-app/main/default/objects/Lead/fields/Outbound_Sales_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Sales_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesloft field for Email Opt Out</description>
    <inlineHelpText>Salesloft field for Email Opt Out</inlineHelpText>
    <label>Outbound Sales Opt Out</label>
    <type>Checkbox</type>
</CustomField>