metadata/force-app/main/default/objects/Lead/fields/Partner_Account_Form__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Form__c</fullName>
    <description>Partner Account for on Pardot Form</description>
    <label>Partner Account Form</label>
    <type>TextArea</type>
</CustomField>