metadata/force-app/main/default/objects/Lead/fields/Partner_Consent_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Partner_Consent_Permissions__c</fullName>
    <description>BODEV-4125
To track GDPR permissions</description>
    <label>Partner Consent Permissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contentful</fullName>
            </value>
            <value>
                <fullName>Akeneo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>