metadata/force-app/main/default/objects/Lead/fields/Partner_Contact_Allbound_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact_Allbound_ID__c</fullName>
    <formula>Referral_Partner_Contact__r.Allbound_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral_Partner_Contact Allbound ID</label>
    <type>Text</type>
</CustomField>