metadata/force-app/main/default/objects/Lead/fields/Partner_Influenced__c.field-meta.xml
<CustomField>
    <fullName>Partner_Influenced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Influenced</label>
    <type>Checkbox</type>
</CustomField>