metadata/force-app/main/default/objects/Lead/fields/Partner_Lead_Acceptance_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Lead_Acceptance_Status__c</fullName>
    <label>Partner Lead Acceptance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>