metadata/force-app/main/default/objects/Lead/fields/Partner_Lead_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Partner_Lead_Rejected_Reason__c</fullName>
    <label>Partner Lead Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead has been registered already</fullName>
            </value>
            <value>
                <fullName>Opportunity recently lost to a competitor</fullName>
            </value>
            <value>
                <fullName>Already a Bynder Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>