metadata/force-app/main/default/objects/Lead/fields/Partner_Name_Form__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name_Form__c</fullName>
    <description>Partner name for on the pardot form</description>
    <label>Partner Name Form</label>
    <type>TextArea</type>
</CustomField>