metadata/force-app/main/default/objects/Lead/fields/Partner_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Source__c</fullName>
    <description>Specifies source in case Lead Source is VASP/Partner.</description>
    <inlineHelpText>Specifies source in case Lead Source is VASP/Partner.</inlineHelpText>
    <label>Partner Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Referral</fullName>
            </value>
            <value>
                <fullName>OEM Registration</fullName>
            </value>
            <value>
                <fullName>Account mapping</fullName>
            </value>
            <value>
                <fullName>Webinar - Bynder Hosted</fullName>
            </value>
            <value>
                <fullName>Webinar - Partner Hosted</fullName>
            </value>
            <value>
                <fullName>Event - Bynder Hosted</fullName>
            </value>
            <value>
                <fullName>Event - Partner Hosted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>