metadata/force-app/main/default/objects/Lead/fields/QualifiedSyncTest__c.field-meta.xml
<CustomField>
    <fullName>QualifiedSyncTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QualifiedSyncTest</label>
    <type>Checkbox</type>
</CustomField>