metadata/force-app/main/default/objects/Lead/fields/Quarter_Created__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Created__c</fullName>
    <formula>CASE(Month_Created__c,1,&quot;Q1&quot;,2,&quot;Q1&quot;,3,&quot;Q1&quot;,4,&quot;Q2&quot;,5,&quot;Q2&quot;,6,&quot;Q2&quot;,7,&quot;Q3&quot;,8,&quot;Q3&quot;,9,&quot;Q3&quot;,10,&quot;Q4&quot;,11,&quot;Q4&quot;,12,&quot;Q4&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter Created</label>
    <type>Text</type>
</CustomField>