metadata/force-app/main/default/objects/Lead/fields/Reason_Nurtured__c.field-meta.xml
<CustomField>
    <fullName>Reason_Nurtured__c</fullName>
    <label>Reason Nurtured</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Project on Hold</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Not Appropriate Contact</fullName>
            </value>
            <value>
                <fullName>No Current Product Fit</fullName>
            </value>
            <value>
                <fullName>Current Company Size</fullName>
            </value>
            <value>
                <fullName>Auto Nurtured after 90 days</fullName>
            </value>
            <value>
                <fullName>Under other DAM Vendor Contract</fullName>
            </value>
            <value>
                <fullName>Same Company</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Current Customer</fullName>
            </value>
            <value>
                <fullName>Open Opp</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>