metadata/force-app/main/default/objects/Lead/fields/Reason_Nurtured_Detail__c.field-meta.xml
<CustomField>
    <fullName>Reason_Nurtured_Detail__c</fullName>
    <description>Further detail on why this lead is not ready to be converted to an opportunity (yet).</description>
    <inlineHelpText>Further detail on why this lead is not ready to be converted to an opportunity (yet).</inlineHelpText>
    <label>Reason Nurtured Detail</label>
    <length>500</length>
    <type>Html</type>
</CustomField>