metadata/force-app/main/default/objects/Lead/fields/Reason_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Reason_Unqualified__c</fullName>
    <label>Reason Unqualified</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Job applicant</fullName>
            </value>
            <value>
                <fullName>Bad Data</fullName>
            </value>
            <value>
                <fullName>Rejected Partner Lead</fullName>
            </value>
            <value>
                <fullName>Left Company</fullName>
            </value>
            <value>
                <fullName>Left Company - Apollo</fullName>
            </value>
            <value>
                <fullName>Left Company - LinkedIn</fullName>
            </value>
            <value>
                <fullName>Freelancer/Consultant</fullName>
            </value>
            <value>
                <fullName>Email Bounced</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Inactivity List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>