metadata/force-app/main/default/objects/Lead/fields/Referral_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Referral Partner Contact)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>