metadata/force-app/main/default/objects/Lead/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>webdam fields</description>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>