metadata/force-app/main/default/objects/Lead/fields/Reporting_Matched_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Matched_Account_ID__c</fullName>
    <formula>IF(
    ISBLANK(LeanData__Reporting_Matched_Account__c),
    &quot;&quot;,
    LeanData__Reporting_Matched_Account__r.Account_ID_18_digits__c
)</formula>
    <label>Reporting Matched Account ID</label>
    <type>Text</type>
</CustomField>