metadata/force-app/main/default/objects/Lead/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Marketing professional</fullName>
            </value>
            <value>
                <fullName>Designer / Creative</fullName>
            </value>
            <value>
                <fullName>IT professional</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Individual Contributor</fullName>
            </value>
            <value>
                <fullName>Student/Intern</fullName>
            </value>
            <value>
                <fullName>VP/SVP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>