metadata/force-app/main/default/objects/Lead/fields/Sales_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this lead been Sales Qualified</description>
    <label>Sales Qualified</label>
    <type>Checkbox</type>
</CustomField>