metadata/force-app/main/default/objects/Lead/fields/Sales_Qualifier_BDR_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qualifier_BDR_Team__c</fullName>
    <formula>TEXT( Sales_Qualifier_New__r.BDR_Team__c )</formula>
    <label>Sales Qualifier BDR Team</label>
    <type>Text</type>
</CustomField>