metadata/force-app/main/default/objects/Lead/fields/Sales_Qualifier_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qualifier_Manager__c</fullName>
    <formula>Sales_Qualifier_New__r.Manager_Name__c</formula>
    <label>Sales Qualifier Manager</label>
    <type>Text</type>
</CustomField>