metadata/force-app/main/default/objects/Lead/fields/Sales_Qualifier_New__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qualifier_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for the Sales Qualifier</description>
    <inlineHelpText>This label links to a workflow who saves the lead owner of the moment the lead gets sales qualified.</inlineHelpText>
    <label>Sales Qualifier</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>