metadata/force-app/main/default/objects/Lead/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <description>BO-1081: renamed the original &quot;Sales Region&quot; to &quot;Subregion&quot;</description>
    <inlineHelpText>Please change Country to update this field</inlineHelpText>
    <label>Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subregion</valueSetName>
    </valueSet>
</CustomField>