metadata/force-app/main/default/objects/Lead/fields/Sales_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Sales_Subregion__c</fullName>
    <inlineHelpText>The Sales Subregion is determined by the State and State Code field</inlineHelpText>
    <label>Sales Subregion (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Subregion</valueSetName>
    </valueSet>
</CustomField>