metadata/force-app/main/default/objects/Lead/fields/SalesLoft1__Active_Lead__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__Active_Lead__c</fullName>
    <description>If Lead has an activity logged within the last 30 days, this field will return a value of 1.</description>
    <formula>IF( TODAY () - LastActivityDate &lt;= 30, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>