metadata/force-app/main/default/objects/Lead/fields/SalesLoft1__Most_Recent_Last_Completed_Step__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__Most_Recent_Last_Completed_Step__c</fullName>
    <description>Number of most recently completed SalesLoft Cadence step.</description>
    <label>Most Recent Cadence - Last Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>