metadata/force-app/main/default/objects/Lead/fields/Self_Reported_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Self_Reported_Attribution__c</fullName>
    <label>Self-Reported Attribution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>