metadata/force-app/main/default/objects/Lead/fields/SF_connector_in_partner_account_form__c.field-meta.xml
<CustomField>
    <fullName>SF_connector_in_partner_account_form__c</fullName>
    <description>Used to store the salesforce connector selected in the partner account form</description>
    <label>SF connector in partner account form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>