metadata/force-app/main/default/objects/Lead/fields/SFMC_Comm_Language__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Comm_Language__c</fullName>
    <description>BODEV-1358: Communication language field created for SFMC segmentation. Maintained by RingLead.</description>
    <label>SFMC Comm Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFMC_Comm_Language</valueSetName>
    </valueSet>
</CustomField>