metadata/force-app/main/default/objects/Lead/fields/SFMC_Content_Download_URL__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Content_Download_URL__c</fullName>
    <label>SFMC Content Download URL</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>