metadata/force-app/main/default/objects/Lead/fields/SFMC_Prospect_Intent_Stage__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Prospect_Intent_Stage__c</fullName>
    <description>BODEV-1358: Segmentation field created for SFMC. Maintained by RingLead.</description>
    <label>SFMC Prospect Intent Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFMC_Prospect_Intent_Stage</valueSetName>
    </valueSet>
</CustomField>