metadata/force-app/main/default/objects/Lead/fields/SFMC_Subscriber_BynderWebdam_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Subscriber_BynderWebdam_Timestamp__c</fullName>
    <description>BODEV-1485: Opt-in management fields for SFMC</description>
    <label>SFMC Subscriber Bynder/Webdam Timestamp</label>
    <type>Date</type>
</CustomField>