metadata/force-app/main/default/objects/Lead/fields/SFMC_Subscriber_OnBrand__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Subscriber_OnBrand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-1485: Opt-in management fields for SFMC</description>
    <label>SFMC Subscriber OnBrand</label>
    <type>Checkbox</type>
</CustomField>