metadata/force-app/main/default/objects/Lead/fields/SFMC_Timezone__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Timezone__c</fullName>
    <description>BODEV-1358: Communication timezone created for SFMC segmentation. Maintained by RingLead.</description>
    <label>SFMC Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SFMC_Timezone</valueSetName>
    </valueSet>
</CustomField>