metadata/force-app/main/default/objects/Lead/fields/SFMC_Webinar_score__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Webinar_score__c</fullName>
    <label>SFMC Webinar score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>