metadata/force-app/main/default/objects/Lead/fields/Situation__c.field-meta.xml
<CustomField>
    <fullName>Situation__c</fullName>
    <inlineHelpText>What is the current situation? Do they have a solution in place? How many people are on the marketing team?</inlineHelpText>
    <label>Situation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>