metadata/force-app/main/default/objects/Lead/fields/SMB_ENTERPRISE__c.field-meta.xml
<CustomField>
    <fullName>SMB_ENTERPRISE__c</fullName>
    <label>Company Size (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Number_of_Employees__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>