metadata/force-app/main/default/objects/Lead/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject from support form</description>
    <inlineHelpText>Subject from support form</inlineHelpText>
    <label>Subject</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>