metadata/force-app/main/default/objects/Lead/fields/Tigger_backdate_business_hours__c.field-meta.xml
<CustomField>
    <fullName>Tigger_backdate_business_hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger-backdate business hours</label>
    <type>Checkbox</type>
</CustomField>