metadata/force-app/main/default/objects/Lead/fields/Time_from_MQL_to_1st_Activity__c.field-meta.xml
<CustomField>
    <fullName>Time_from_MQL_to_1st_Activity__c</fullName>
    <formula>If(Timestamp_MQL__c&gt;Timestamp_First_Activity__c,0, 
(Timestamp_First_Activity__c - Timestamp_MQL__c)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time from MQL to 1st Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>