metadata/force-app/main/default/objects/Lead/fields/Time_from_MQL_to_Opp__c.field-meta.xml
<CustomField>
    <fullName>Time_from_MQL_to_Opp__c</fullName>
    <formula>IF(
AND(NOT(ISBLANK(ConvertedOpportunityId)), ConvertedDate - DATEVALUE(Timestamp_MQL__c) &lt;= 30), 
True, False)</formula>
    <label>Time from MQL to Opp within 30 days</label>
    <type>Checkbox</type>
</CustomField>